# alpaka

./: CHANGELOG.md  RELEASING.md  graphql.config.yaml  pyproject.toml
.github/workflows/: integration.yaml
alpaka/: arkitekt.py  funcs.py  openai.py  rekuest.py  traits.py
alpaka/api/: project.json  schema.graphql  schema.py
graphql/fragments/: collection.graphql  document.graphql  llmodel.graphql  message.graphql  provider.graphql
graphql/queries/: collection.graphql  llmodel.graphql  message.graphql  room.graphql
tests/: conftest.py  test_collection.py  test_initialization.py  test_llmodel.py  test_message.py  test_room.py
tests/integration/: docker-compose.yml
tests/integration/configs/: alpaka.yaml
