[project]
name = "alpaka"
version = "0.7.1"
description = ""
authors = [{ name = "jhnnsrs", email = "jhnnsrs@gmail.com" }]
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "aiohttp>=3.9.5,<4",
    "koil>=1.0.0",
    "rath>=3.12",
    "websockets>=15.0.1",
]


[tool.uv]
dev-dependencies = [
    "dokker>=2.5",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-aiohttp>=1.0.5,<2",
    "pytest-cov>=5.0.0,<6",
    "testcontainers==3.7.0",
    "python-semantic-release>=9.21.1",
]

[tool.hatch.build.targets.sdist]
include = ["alpaka"]

[tool.hatch.build.targets.wheel]
include = ["alpaka"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "composition: test composition",
    "external: test external",
    "integration: test integration",
]


[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
upload_to_pypi = true
branch = "main"
build_command = "uv build"

