[project]
name = "alpaka"
version = "1.0.0"
description = ""
authors = [{ name = "jhnnsrs", email = "jhnnsrs@gmail.com" }]
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "aiohttp>=3.9.5,<4",
    "koil>=1.0.0",
    "rath>=3.12",
    "websockets>=15.0.1",
]

[project.optional-dependencies]
# Installed inside the semantic-release Docker action so build_command has uv.
build = ["uv>=0.7.12"]


[tool.uv]
dev-dependencies = [
    "dokker>=2.5",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-aiohttp>=1.0.5,<2",
    "pytest-cov>=5.0.0,<6",
    "testcontainers==3.7.0",
    "python-semantic-release>=9.21.1",
    "ruff>0.11",
    "basedpyright>=1.21",
]

[tool.basedpyright]
include = ["alpaka"]
exclude = ["**/__pycache__", "tests"]
typeCheckingMode = "standard"

[tool.hatch.build.targets.sdist]
include = ["alpaka"]

[tool.hatch.build.targets.wheel]
include = ["alpaka"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "composition: test composition",
    "external: test external",
    "integration: test integration",
]


[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
# The semantic-release GitHub Action runs in a Docker container without uv, so
# install it first (the `build` extra). After PSR bumps the version in
# pyproject.toml, re-sync just this package's entry in uv.lock and stage it so
# the release commit carries a consistent lock. $PACKAGE_NAME is injected by PSR.
build_command = """
    python -m pip install -e '.[build]'
    uv lock --upgrade-package "$PACKAGE_NAME"
    git add uv.lock
    uv build
"""
commit_message = "chore(release): v{version} [skip ci]"

# main -> stable X.Y.Z. next -> prereleases X.Y.Z-rc.N. N.x -> maintenance.
[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.branches.next]
match = "next"
prerelease = true
prerelease_token = "rc"

# Maintenance branches (1.x, 2.x, ...) cut stable patch/minor releases for an
# older major after a new major has shipped from main.
[tool.semantic_release.branches.maintenance]
match = '^\d+\.x$'
prerelease = false

# Keep the changelog focused on user-facing changes. These patterns only filter
# what's rendered — they do not affect version bumps.
[tool.semantic_release.changelog]
exclude_commit_patterns = [
    '^chore(?:\([^)]*\))?: ',
    '^ci(?:\([^)]*\))?: ',
    '^build(?:\([^)]*\))?: ',
    '^style(?:\([^)]*\))?: ',
    '^test(?:\([^)]*\))?: ',
    '^Merge ',
]

